@@ -5,6 +5,7 @@ import it.operazione_fratellino.of_backend.services.UserService;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
+import org.springframework.context.annotation.Lazy;
 import org.springframework.core.env.Environment;
 import org.springframework.security.authentication.AuthenticationManager;
 import org.springframework.security.config.Customizer;
@@ -26,6 +27,9 @@ import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
 import java.util.Arrays;
+import java.util.Collections;
+import java.util.List;
+import java.util.Objects;
 
 @Configuration
 @EnableWebSecurity
@@ -34,13 +38,22 @@ public class SecurityConfig {
 
     @Autowired
     private UserService userService;
-
+    @Autowired
+    private JwtRequestFilter jwtRequestFilter;
+    @Autowired
+    private JwtAuthenticationEntryPoint jwtAuthenticationEntryPoint;
+    @Autowired
+    private CustomAccessDeniedHandler customAccessDeniedHandler;
 
     private final Environment env;
 
-    public SecurityConfig(Environment env){
+    public SecurityConfig(Environment env) {
         this.env = env;
     }
+
+    private final String[] ADMIN_ROUTES = {"/api/products/delete/*", "/api/admin/*", "/api/admin/users/all"};
+    private final String[] OPERATOR_ROUTES = {"/api/sales/*"};
+    private final String[] PUBLIC_ROUTES = {"/api/auth/register", "/api/auth/login", "/api/public/**"};
 
     @Bean
     public UserDetailsService userDetailsService() {
@@ -49,11 +62,10 @@ public class SecurityConfig {
             if (user == null) {
                 throw new UsernameNotFoundException("User not found");
             }
-            return org.springframework.security.core.userdetails.User
-                    .withUsername(user.getEmail())
-                    .password(user.getPassword())
-                    .roles(user.getRole().getName())
-                    .build();
+            if (user.getIsDeleted()) {
+                throw new UsernameNotFoundException("User is deleted");
+            }
+            return org.springframework.security.core.userdetails.User.withUsername(user.getEmail()).password(user.getPassword()).roles(user.getRole().getName()).build();
         };
     }
 
@@ -73,26 +85,33 @@ public class SecurityConfig {
                 .cors(cors -> cors.configurationSource(corsConfigurationSource()))
                 .csrf(AbstractHttpConfigurer::disable)
                 .authorizeHttpRequests(authorizeRequests -> authorizeRequests
-//                    .requestMatchers("/api/products/delete/*").hasRole("ADMIN")
-                    .requestMatchers("/api/auth/register", "/api/auth/login").permitAll()
-                    .anyRequest().authenticated()
-//                    .anyRequest().permitAll()
-                )
-                .sessionManagement(session->session.sessionCreationPolicy(SessionCreationPolicy.ALWAYS));
+                                .requestMatchers(this.ADMIN_ROUTES).hasAnyRole("ADMIN", "DEVELOPER")
+                                .requestMatchers(this.OPERATOR_ROUTES).hasAnyRole("ADMIN", "OPERATOR", "DEVELOPER")
+                                .requestMatchers(this.PUBLIC_ROUTES).permitAll()
+                                .anyRequest().authenticated()
+                //                    .anyRequest().permitAll()
+        )
+        .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.ALWAYS))
+        .exceptionHandling(exceptionHandling -> exceptionHandling
+        .authenticationEntryPoint(jwtAuthenticationEntryPoint)
+        .accessDeniedHandler(customAccessDeniedHandler));
+
+        http.addFilterBefore(jwtRequestFilter, UsernamePasswordAuthenticationFilter.class);
         return http.build();
     }
 
     @Bean
-    public CorsConfigurationSource corsConfigurationSource(){
+    public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(Arrays.asList(env.getProperty("cors.allowedOrigins"),"https://192.168.0.212:5173"));
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
+//        configuration.setAllowedOrigins(Arrays.asList(env.getProperty("cors.allowedOrigins").split(",")));
+        configuration.setAllowedOriginPatterns(List.of("*"));
+        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
         configuration.setAllowCredentials(true);
-        configuration.setAllowedHeaders(Arrays.asList("Content-Type", "Authorization", "X-Requested-With", "X-CSRF-Token"));
+        configuration.setAllowedHeaders(Arrays.asList("Content-Type", "Authorization", "X-Requested-With", "X-CSRF-Token", "Access-Control-Allow-Origin"));
+        configuration.setExposedHeaders(Arrays.asList("Authorization"));
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
         return source;
-
     }
 }
 
